# deathbycaptcha-api-client-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: coverage.yml  integration.yml  publish.yml  unit-tests.yml
cmake/: DeathByCaptchaCppConfig.cmake.in
examples/: CMakeLists.txt  example.Amazon_Waf.cpp  example.Atb.cpp  example.Audio.cpp  example.Capy.cpp  example.Cutcaptcha.cpp  example.Datadome.cpp  example.Friendly.cpp  example.Geetest_v3.cpp  example.Geetest_v4.cpp  example.Lemin.cpp  example.Mtcaptcha.cpp  example.Normal_Captcha.cpp  example.Siara.cpp  example.Tencent.cpp  example.Textcaptcha.cpp  example.ThreadSafe_Http.cpp  example.ThreadSafe_Socket.cpp  example.Turnstile.cpp  example.reCAPTCHA_Coordinates.cpp  example.reCAPTCHA_Image_Group.cpp  example.reCAPTCHA_v2.cpp  example.reCAPTCHA_v2_Enterprise.cpp  example.reCAPTCHA_v3.cpp  get_balance.cpp
include/deathbycaptcha/: deathbycaptcha.hpp
src/: deathbycaptcha.cpp
tests/integration/: CMakeLists.txt  test_api_basic.cpp
tests/unit/: CMakeLists.txt  test_client_core.cpp  test_coverage_boost.cpp  test_exceptions.cpp  test_http_client.cpp  test_http_transport.cpp  test_models.cpp  test_socket_client.cpp  test_socket_transport.cpp  test_thread_safe_usage.cpp
