cmake_minimum_required(VERSION 3.21)

# Each example links against the shared library
set(DBC_LIB DeathByCaptcha::cpp)

function(dbc_example name file)
    add_executable(${name} ${file})
    target_link_libraries(${name} PRIVATE ${DBC_LIB})
    target_include_directories(${name} PRIVATE
        ${CMAKE_SOURCE_DIR}/include)
endfunction()

dbc_example(get_balance            get_balance.cpp)
dbc_example(ex_normal              example.Normal_Captcha.cpp)
dbc_example(ex_recaptcha_v2        example.reCAPTCHA_v2.cpp)
dbc_example(ex_recaptcha_v3        example.reCAPTCHA_v3.cpp)
dbc_example(ex_recaptcha_v2_ent    example.reCAPTCHA_v2_Enterprise.cpp)
dbc_example(ex_recaptcha_coord     example.reCAPTCHA_Coordinates.cpp)
dbc_example(ex_recaptcha_imggroup  example.reCAPTCHA_Image_Group.cpp)
dbc_example(ex_turnstile           example.Turnstile.cpp)
dbc_example(ex_amazon_waf          example.Amazon_Waf.cpp)
dbc_example(ex_atb                 example.Atb.cpp)
dbc_example(ex_audio               example.Audio.cpp)
dbc_example(ex_capy                example.Capy.cpp)
dbc_example(ex_cutcaptcha          example.Cutcaptcha.cpp)
dbc_example(ex_datadome            example.Datadome.cpp)
dbc_example(ex_friendly            example.Friendly.cpp)
dbc_example(ex_geetest_v3          example.Geetest_v3.cpp)
dbc_example(ex_geetest_v4          example.Geetest_v4.cpp)
dbc_example(ex_lemin               example.Lemin.cpp)
dbc_example(ex_mtcaptcha           example.Mtcaptcha.cpp)
dbc_example(ex_siara               example.Siara.cpp)
dbc_example(ex_tencent             example.Tencent.cpp)
dbc_example(ex_textcaptcha         example.Textcaptcha.cpp)
dbc_example(ex_threadsafe_http     example.ThreadSafe_Http.cpp)
dbc_example(ex_threadsafe_socket   example.ThreadSafe_Socket.cpp)
